WIP keys in css display 1st step

--- a/index.html
+++ b/index.html
@@ -5,37 +5,35 @@
   <title>Keytar soundboard</title>
 </head>
 <body>
-  <div data-key="q" class="white"></div>
-  <div data-key="w" class="white"></div>
-  <div data-key="e" class="white"></div>
-  <div data-key="r" class="white"></div>
-  <div data-key="t" class="white"></div>
-  <div data-key="y" class="white"></div>
-  <div data-key="u" class="white"></div>
-  <div data-key="i" class="white"></div>
-  <div data-key="o" class="white"></div>
-  <div data-key="p" class="white"></div>
-  <div data-key="z" class="white"></div>
-  <div data-key="x" class="white"></div>
-  <div data-key="c" class="white"></div>
-  <div data-key="v" class="red"></div>
-  <div data-key="b" class="white"></div>
-  <div data-key="n" class="white"></div>
-
-  <div data-key="3" class="black"></div>
-  <div data-key="4" class="black"></div>
-  <div data-key="6" class="black"></div>
-  <div data-key="7" class="black"></div>
-  <div data-key="8" class="black"></div>
-  <div data-key="0" class="black"></div>
-  <div data-key="-" class="black"></div>
-  <div data-key="d" class="black"></div>
-  <div data-key="f" class="black"></div>
-  <div data-key="g" class="black"></div>
-
-
-
-
-  white 64 177   blakc 35 x130
+  <div>
+    <div class="container">
+      <div data-key="q" class="white"></div>
+      <div data-key="w" class="white"></div>
+      <div data-key="e" class="white"></div>
+      <div data-key="r" class="white"></div>
+      <div data-key="t" class="white"></div>
+      <div data-key="y" class="white"></div>
+      <div data-key="u" class="white"></div>
+      <div data-key="i" class="white"></div>
+      <div data-key="o" class="white"></div>
+      <div data-key="p" class="white"></div>
+      <div data-key="z" class="white"></div>
+      <div data-key="x" class="white"></div>
+      <div data-key="c" class="white"></div>
+      <div data-key="v" class="red"></div>
+      <div data-key="b" class="white"></div>
+      <div data-key="n" class="white"></div>
+    </div>
+    <div data-key="3" class="black uno"></div>
+    <div data-key="4" class="black deux"></div>
+    <div data-key="6" class="black trois"></div>
+    <div data-key="7" class="black quatre"></div>
+    <div data-key="8" class="black cinq"></div>
+    <div data-key="0" class="black six"></div>
+    <div data-key="-" class="black sept"></div>
+    <div data-key="d" class="black huit"></div>
+    <div data-key="f" class="black neuf"></div>
+    <div data-key="g" class="black zero"></div>
+  </div>
 </body>
 </html>
