js key code found and displayed in readme file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div>
     <div class="container">
-      <div data-key="q" class="white"></div>
+      <button data-key="q" class="white"></button>
       <div data-key="w" class="white"></div>
       <div data-key="e" class="white"></div>
       <div data-key="r" class="white"></div>
