put the data-key for each key in html + add a .wav sound for tests later

--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
 <body>
   <div>
     <div class="container">
-      <button data-key="q" class="white"></button>
-      <div data-key="w" class="white"></div>
-      <div data-key="e" class="white"></div>
-      <div data-key="r" class="white"></div>
-      <div data-key="t" class="white"></div>
-      <div data-key="y" class="white"></div>
-      <div data-key="u" class="white"></div>
-      <div data-key="i" class="white"></div>
-      <div data-key="o" class="white"></div>
-      <div data-key="p" class="white"></div>
-      <div data-key="z" class="white"></div>
-      <div data-key="x" class="white"></div>
-      <div data-key="c" class="white"></div>
-      <div data-key="v" class="red"></div>
-      <div data-key="b" class="white"></div>
-      <div data-key="n" class="white"></div>
+      <button data-key="81" class="white">q</button>
+      <div data-key="87" class="white">w</div>
+      <div data-key="69" class="white">e</div>
+      <div data-key="82" class="white">r</div>
+      <div data-key="84" class="white">t</div>
+      <div data-key="89" class="white">y</div>
+      <div data-key="85" class="white">u</div>
+      <div data-key="73" class="white">i</div>
+      <div data-key="79" class="white">o</div>
+      <div data-key="80" class="white">p</div>
+      <div data-key="90" class="white">z</div>
+      <div data-key="88" class="white">x</div>
+      <div data-key="67" class="white">c</div>
+      <div data-key="86" class="red">v</div>
+      <div data-key="66" class="white">b</div>
+      <div data-key="78" class="white">n</div>
     </div>
-    <div data-key="3" class="black uno"></div>
-    <div data-key="4" class="black deux"></div>
-    <div data-key="6" class="black trois"></div>
-    <div data-key="7" class="black quatre"></div>
-    <div data-key="8" class="black cinq"></div>
-    <div data-key="0" class="black six"></div>
-    <div data-key="-" class="black sept"></div>
-    <div data-key="d" class="black huit"></div>
-    <div data-key="f" class="black neuf"></div>
-    <div data-key="g" class="black zero"></div>
+    <div data-key="51" class="black uno">3</div>
+    <div data-key="52" class="black deux">4</div>
+    <div data-key="54" class="black trois">6</div>
+    <div data-key="55" class="black quatre">7</div>
+    <div data-key="56" class="black cinq">8</div>
+    <div data-key="48" class="black six">0</div>
+    <div data-key="189" class="black sept">-</div>
+    <div data-key="68" class="black huit">d</div>
+    <div data-key="70" class="black neuf">f</div>
+    <div data-key="71" class="black zero">g</div>
   </div>
 </body>
 </html>
