sounds and display work well keydown and keyup ok

--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
 <body>
   <div class="keys">
     <div class="container main-keys">
-      <button data-key="81" class="white">
+      <div data-key="81" class="key white">
         <kbd>q</kbd>
-        <span class="sound">doorbell</span></button>
-      <div data-key="87" class="white">w</div>
-      <div data-key="69" class="white">e</div>
-      <div data-key="82" class="white">r</div>
-      <div data-key="84" class="white">t</div>
-      <div data-key="89" class="white">y</div>
-      <div data-key="85" class="white">u</div>
-      <div data-key="73" class="white">i</div>
-      <div data-key="79" class="white">o</div>
-      <div data-key="80" class="white">p</div>
-      <div data-key="90" class="white">z</div>
-      <div data-key="88" class="white">x</div>
-      <div data-key="67" class="white">c</div>
-      <div data-key="86" class="red">v</div>
-      <div data-key="66" class="white">b</div>
-      <div data-key="78" class="white">n</div>
+        <span class="sound">doorbell</span></div>
+      <div data-key="87" class="key white">w</div>
+      <div data-key="69" class="key white">e</div>
+      <div data-key="82" class="key white">r</div>
+      <div data-key="84" class="key white">t</div>
+      <div data-key="89" class="key white">y</div>
+      <div data-key="85" class="key white">u</div>
+      <div data-key="73" class="key white">i</div>
+      <div data-key="79" class="key white">o</div>
+      <div data-key="80" class="key white">p</div>
+      <div data-key="90" class="key white">z</div>
+      <div data-key="88" class="key white">x</div>
+      <div data-key="67" class="key white">c</div>
+      <div data-key="86" class="key red">v</div>
+      <div data-key="66" class="key white">b</div>
+      <div data-key="78" class="key white">n</div>
     </div>
     <div class="flat-keys">
-      <div data-key="51" class="black uno">3</div>
-      <div data-key="52" class="black deux">4</div>
-      <div data-key="54" class="black trois">6</div>
-      <div data-key="55" class="black quatre">7</div>
-      <div data-key="56" class="black cinq">8</div>
-      <div data-key="48" class="black six">0</div>
-      <div data-key="189" class="black sept">-</div>
-      <div data-key="68" class="black huit">d</div>
-      <div data-key="70" class="black neuf">f</div>
-      <div data-key="71" class="black zero">g</div>
+      <div data-key="51" class="key black uno">3</div>
+      <div data-key="52" class="key black deux">4</div>
+      <div data-key="54" class="key black trois">6</div>
+      <div data-key="55" class="key black quatre">7</div>
+      <div data-key="56" class="key black cinq">8</div>
+      <div data-key="48" class="key black six">0</div>
+      <div data-key="189" class="key black sept">-</div>
+      <div data-key="68" class="key black huit">d</div>
+      <div data-key="70" class="key black neuf">f</div>
+      <div data-key="71" class="key black zero">g</div>
     </div>
   </div>
     <audio data-key="81" src="sounds/doorbell.wav"></audio>
