uploaded some sound

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <div data-key="71" class="key black zero">g</div>
     </div>
   </div>
-    <audio data-key="81" src="sounds/doorbell.wav"></audio>
-    <audio data-key="87" src="sounds/doorbell.wav"></audio>
+    <audio data-key="81" src="sounds/guitar1.oga"></audio>
+    <audio data-key="87" src="sounds/wahwah.ogg"></audio>
     <audio data-key="69" src="sounds/doorbell.wav"></audio>
     <audio data-key="82" src="sounds/doorbell.wav"></audio>
     <audio data-key="84" src="sounds/doorbell.wav"></audio>
