fixing the sound and html

--- a/index.html
+++ b/index.html
@@ -10,99 +10,114 @@
   <div class="keys">
     <div class="container main-keys">
       <div data-key="81" class="key white">
-        <span class="sound">q</span></div>
-      <div data-key="87" class="key white" ><span class="sound">w</span></div>
-      <div data-key="69" class="key white on"><span class="sound">e</span>
-        <div data-key="51" class="key black uno"><span class="sound">3</span></div>
+        <span class="sound">q</span>
+      </div>
+      <div data-key="87" class="key white" >
+        <span class="sound">w</span>
+      </div>
+      <div data-key="69" class="key white on">
+        <span class="sound">e</span>
+        <div data-key="51" class="key black uno">
+          <span class="sound">3</span>
+        </div>
       </div>
 
-      <div data-key="82" class="key white"><span class="sound">r</span>
-        <div data-key="52" class="key black deux"><span class="sound">4</span></div>
+      <div data-key="82" class="key white">
+        <span class="sound">r</span>
+        <div data-key="52" class="key black deux">
+          <span class="sound">4</span>
+        </div>
       </div>
-      <div data-key="84" class="key white"><span class="sound">t</span></div>
-      <div data-key="89" class="key white"><span class="sound">y</span>
-        <div data-key="54" class="key black trois"><span class="sound">6</span></div>
+      <div data-key="84" class="key white">
+        <span class="sound">t</span>
       </div>
-      <div data-key="85" class="key white"><span class="sound">u</span>
-        <div data-key="55" class="key black quatre"><span class="sound">7</span></div>
+      <div data-key="89" class="key white">
+        <span class="sound">y</span>
+        <div data-key="54" class="key black trois">
+          <span class="sound">6</span>
+        </div>
       </div>
-      <div data-key="73" class="key white"><span class="sound">i</span>
-        <div data-key="56" class="key black cinq"><span class="sound">8</span></div>
+      <div data-key="85" class="key white">
+        <span class="sound">u</span>
+        <div data-key="55" class="key black quatre">
+          <span class="sound">7</span>
+        </div>
       </div>
-      <div data-key="79" class="key white"><span class="sound">o</span>
+      <div data-key="73" class="key white">
+        <span class="sound">i</span>
+        <div data-key="56" class="key black cinq">
+          <span class="sound">8</span>
+        </div>
       </div>
-      <div data-key="80" class="key white"><span class="sound">p</span>
-        <div data-key="48" class="key black six"><span class="sound">0</span></div>
+      <div data-key="79" class="key white">
+        <span class="sound">o</span>
       </div>
-      <div data-key="90" class="key white"><span class="sound">z</span>
-        <div data-key="189" class="key black sept"><span class="sound">-</span></div>
+      <div data-key="80" class="key white">
+        <span class="sound">p</span>
+        <div data-key="48" class="key black six">
+          <span class="sound">0</span>
+        </div>
       </div>
-      <div data-key="88" class="key white"><span class="sound">x</span>
-
+      <div data-key="90" class="key white">
+        <span class="sound">z</span>
+        <div data-key="189" class="key black sept">
+          <span class="sound">-</span>
+        </div>
       </div>
-      <div data-key="67" class="key white"><span class="sound">c</span>
-        <div data-key="68" class="key black huit"><span class="sound">d</span></div>
+      <div data-key="88" class="key white">
+        <span class="sound">x</span>
       </div>
-      <div data-key="86" class="key red"><span class="sound">v</span>
-        <div data-key="70" class="key black neuf"><span class="sound">f</span></div>
+      <div data-key="67" class="key white">
+        <span class="sound">c</span>
+        <div data-key="68" class="key black huit">
+          <span class="sound">d</span>
+        </div>
       </div>
-      <div data-key="66" class="key white"><span class="sound">b</span>
-        <div data-key="71" class="key black zero"><span class="sound">g</span></div>
+      <div data-key="86" class="key red">
+        <span class="sound">v</span>
+        <div data-key="70" class="key black neuf">
+          <span class="sound">f</span>
+        </div>
       </div>
-      <div data-key="78" class="key white"><span class="sound">n</span>
+      <div data-key="66" class="key white">
+        <span class="sound">b</span>
+        <div data-key="71" class="key black zero">
+          <span class="sound">g</span>
+        </div>
+      </div>
+      <div data-key="78" class="key white">
+        <span class="sound">n</span>
       </div>
     </div>
-    <div class="flat-keys">
-
-
-
-
-
-
-
-
-
-
-    </div>
+<!--     <div class="flat-keys">
+    </div> -->
   </div>
-    <audio data-key="81" src="sounds/q.mp3" ></audio>
-    <audio data-key="87" src="sounds/w.mp3"></audio>
-    <audio data-key="69" src="sounds/e.mp3" class="on"></audio>
-    <audio data-key="82" src="sounds/r.mp3"></audio>
-    <audio data-key="84" src="sounds/t.mp3"></audio>
-    <audio data-key="89" src="sounds/y_.mp3"></audio>
-    <audio data-key="85" src="sounds/u.mp3"></audio>
-    <audio data-key="73" src="sounds/i.mp3"></audio>
-    <audio data-key="79" src="sounds/o.mp3"></audio>
-    <audio data-key="80" src="sounds/p.mp3"></audio>
-    <audio data-key="90" src="sounds/z.mp3"></audio>
-    <audio data-key="88" src="sounds/x.mp3"></audio>
-    <audio data-key="67" src="sounds/c.mp3"></audio>
-  <!-- vb review the sound not reactif enough -->
-    <audio data-key="66" src="sounds/b_accompagnement_debutant.mp3"></audio>
-    <audio data-key="78" src="sounds/pent.mp3"></audio>
-  <!-- vb review the sound not reactif enough -->
-    <audio data-key="86" src="sounds/v_debutant.mp3"></audio>
-    <!-- 3 -->
-    <audio data-key="51" src="sounds/palm mute.mp3"></audio>
-    <!-- 4 -->
-    <audio data-key="52" src="sounds/accord c.mp3"></audio>
-    <!-- 6 -->
-    <audio data-key="54" src="sounds/accord D.mp3"></audio>
-    <!-- 7 -->
-    <audio data-key="55" src="sounds/accord Em.mp3"></audio>
-  <!-- 8 review the sound not reactif enough-->
-    <audio data-key="56" src="sounds/8.mp3"></audio>
-    <!-- 0 -->
-    <audio data-key="48" src="sounds/pent1.mp3"></audio>
-    <!-- - -->
-    <audio data-key="189" src="sounds/wahwah.ogg"></audio>
-    <!-- d -->
-    <audio data-key="68" src="sounds/doorbell.wav"></audio>
-  <!-- f review the sound not reactif enough-->
-    <audio data-key="70" src="sounds/80s Game Synth Bass 02.ogg"></audio>
-  <!-- g review the sound not reactif enough-->
-    <audio data-key="71" src="sounds/sol.mp3"></audio>
+    <!-- q --> <audio data-key="81" src="sounds/q.mp3" ></audio>
+    <!-- w --> <audio data-key="87" src="sounds/w.mp3"></audio>
+    <!-- e --> <audio data-key="69" src="sounds/e.mp3" class="on"></audio>
+    <!-- r --> <audio data-key="82" src="sounds/r.mp3"></audio>
+    <!-- t --> <audio data-key="84" src="sounds/t.mp3"></audio>
+    <!-- y --> <audio data-key="89" src="sounds/y_.mp3"></audio>
+    <!-- u --> <audio data-key="85" src="sounds/u.mp3"></audio>
+    <!-- i --> <audio data-key="73" src="sounds/i.mp3"></audio>
+    <!-- o --> <audio data-key="79" src="sounds/o.mp3"></audio>
+    <!-- p --> <audio data-key="80" src="sounds/p.mp3"></audio>
+    <!-- z --> <audio data-key="90" src="sounds/z.mp3"></audio>
+    <!-- x --> <audio data-key="88" src="sounds/x.mp3"></audio>
+    <!-- c --> <audio data-key="67" src="sounds/c.mp3"></audio>
+    <!-- b --> <audio data-key="66" src="sounds/wahwah.ogg"></audio>
+    <!-- n --> <audio data-key="78" src="sounds/pent.mp3"></audio>
+    <!-- v --> <audio data-key="86" src="sounds/doorbell.wav"></audio>
+    <!-- 3 --> <audio data-key="51" src="sounds/palm mute.mp3"></audio>
+    <!-- 4 --> <audio data-key="52" src="sounds/accord_C.mp3"></audio>
+    <!-- 6 --> <audio data-key="54" src="sounds/accord_D.mp3"></audio>
+    <!-- 7 --> <audio data-key="55" src="sounds/accord_E.mp3"></audio>
+    <!-- 8 --> <audio data-key="56" src="sounds/accord_Em.mp3"></audio>
+    <!-- 0 --> <audio data-key="48" src="sounds/accord_A.mp3"></audio>
+    <!-- - --> <audio data-key="189" src="sounds/accord_Am.MP3"></audio>
+    <!-- d --> <audio data-key="68" src="sounds/accord_G.mp3"></audio>
+    <!-- f --> <audio data-key="70" src="sounds/accord_F.mp3"></audio>
+    <!-- g --> <audio data-key="71" src="sounds/pent1.mp3"></audio>
     <script src="index.js"></script>
 </body>
 </html>
