added a real keytar picture to implement the keyboard in

--- a/index.html
+++ b/index.html
@@ -6,91 +6,94 @@
   <title>Keytar soundboard</title>
 </head>
 <body>
-  <img src='images/keytarhero.jpeg'/>
-  <div class="keys">
-    <div class="container main-keys">
-      <div data-key="81" class="key white">
-        <span class="sound">q</span>
-      </div>
-      <div data-key="87" class="key white" >
-        <span class="sound">w</span>
-      </div>
-      <div data-key="69" class="key white on">
-        <span class="sound">e</span>
-        <div data-key="51" class="key black uno">
-          <span class="sound">3</span>
+  <img src='images/keytarhero.jpeg' class="chang"/>
+  <img src='images/ax_synth_top_gal.png' class="keytar"/>
+  <div class="keyboard">
+    <div class="keys">
+      <div class="container main-keys">
+        <div data-key="81" class="key white">
+          <span class="sound">q</span>
         </div>
-      </div>
+        <div data-key="87" class="key white" >
+          <span class="sound">w</span>
+        </div>
+        <div data-key="69" class="key white on">
+          <span class="sound">e</span>
+          <div data-key="51" class="key black uno">
+            <span class="sound">3</span>
+          </div>
+        </div>
 
-      <div data-key="82" class="key white">
-        <span class="sound">r</span>
-        <div data-key="52" class="key black deux">
-          <span class="sound">4</span>
+        <div data-key="82" class="key white">
+          <span class="sound">r</span>
+          <div data-key="52" class="key black deux">
+            <span class="sound">4</span>
+          </div>
+        </div>
+        <div data-key="84" class="key white">
+          <span class="sound">t</span>
+        </div>
+        <div data-key="89" class="key white">
+          <span class="sound">y</span>
+          <div data-key="54" class="key black trois">
+            <span class="sound">6</span>
+          </div>
+        </div>
+        <div data-key="85" class="key white">
+          <span class="sound">u</span>
+          <div data-key="55" class="key black quatre">
+            <span class="sound">7</span>
+          </div>
+        </div>
+        <div data-key="73" class="key white">
+          <span class="sound">i</span>
+          <div data-key="56" class="key black cinq">
+            <span class="sound">8</span>
+          </div>
+        </div>
+        <div data-key="79" class="key white">
+          <span class="sound">o</span>
+        </div>
+        <div data-key="80" class="key white">
+          <span class="sound">p</span>
+          <div data-key="48" class="key black six">
+            <span class="sound">0</span>
+          </div>
+        </div>
+        <div data-key="90" class="key white">
+          <span class="sound">z</span>
+          <div data-key="189" class="key black sept">
+            <span class="sound">-</span>
+          </div>
+        </div>
+        <div data-key="88" class="key white">
+          <span class="sound">x</span>
+        </div>
+        <div data-key="67" class="key white">
+          <span class="sound">c</span>
+          <div data-key="68" class="key black huit">
+            <span class="sound">d</span>
+          </div>
+        </div>
+        <div data-key="86" class="key red">
+          <span class="sound">v</span>
+          <div data-key="70" class="key black neuf">
+            <span class="sound">f</span>
+          </div>
+        </div>
+        <div data-key="66" class="key white">
+          <span class="sound">b</span>
+          <div data-key="71" class="key black zero">
+            <span class="sound">g</span>
+          </div>
+        </div>
+        <div data-key="78" class="key white">
+          <span class="sound">n</span>
         </div>
       </div>
-      <div data-key="84" class="key white">
-        <span class="sound">t</span>
-      </div>
-      <div data-key="89" class="key white">
-        <span class="sound">y</span>
-        <div data-key="54" class="key black trois">
-          <span class="sound">6</span>
-        </div>
-      </div>
-      <div data-key="85" class="key white">
-        <span class="sound">u</span>
-        <div data-key="55" class="key black quatre">
-          <span class="sound">7</span>
-        </div>
-      </div>
-      <div data-key="73" class="key white">
-        <span class="sound">i</span>
-        <div data-key="56" class="key black cinq">
-          <span class="sound">8</span>
-        </div>
-      </div>
-      <div data-key="79" class="key white">
-        <span class="sound">o</span>
-      </div>
-      <div data-key="80" class="key white">
-        <span class="sound">p</span>
-        <div data-key="48" class="key black six">
-          <span class="sound">0</span>
-        </div>
-      </div>
-      <div data-key="90" class="key white">
-        <span class="sound">z</span>
-        <div data-key="189" class="key black sept">
-          <span class="sound">-</span>
-        </div>
-      </div>
-      <div data-key="88" class="key white">
-        <span class="sound">x</span>
-      </div>
-      <div data-key="67" class="key white">
-        <span class="sound">c</span>
-        <div data-key="68" class="key black huit">
-          <span class="sound">d</span>
-        </div>
-      </div>
-      <div data-key="86" class="key red">
-        <span class="sound">v</span>
-        <div data-key="70" class="key black neuf">
-          <span class="sound">f</span>
-        </div>
-      </div>
-      <div data-key="66" class="key white">
-        <span class="sound">b</span>
-        <div data-key="71" class="key black zero">
-          <span class="sound">g</span>
-        </div>
-      </div>
-      <div data-key="78" class="key white">
-        <span class="sound">n</span>
-      </div>
+  <!--     <div class="flat-keys">
+      </div> -->
     </div>
-<!--     <div class="flat-keys">
-    </div> -->
   </div>
     <!-- q --> <audio data-key="81" src="sounds/q.mp3" ></audio>
     <!-- w --> <audio data-key="87" src="sounds/w.mp3"></audio>
